Fix hero photo aspect ratio on mobile screens

--- a/style.css
+++ b/style.css
@@ -691,8 +691,9 @@ span.multiple-text {
     }
 
     .hero-img .blob-wrapper {
-        width: 60vw;
-        height: 60vw;
+        width: 80vw;
+        height: auto;
+        aspect-ratio: 3 / 4;
         margin-top: 4rem;
     }
 
